<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_voltar" />


    <Button
        android:id="@+id/btnCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_categoria" />

    <Button
        android:id="@+id/btnTipoCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tipoCategoria" />

    <Button
        android:id="@+id/btnItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_item" />

    <Button
        android:id="@+id/btnSubItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_subItem" />

    <Button
        android:id="@+id/btnElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_elemento" />

    <Button
        android:id="@+id/btnBanco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_banco" />

    <Button
        android:id="@+id/btnConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_conta" />

    <Button
        android:id="@+id/btnFavorito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_favorito" />

</LinearLayout>