<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivityCadastroLancamento">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEstrutura"

            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_estrutura" />

        <Button
            android:id="@+id/btnElemento"

            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_elemento" />

        <Button
            android:id="@+id/btnConta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_conta" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:text="@string/txt_descricaoCategoria" />

        <EditText
            android:id="@+id/textCategoria"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:text="@string/txt_descricaoTipo" />

        <EditText
            android:id="@+id/textTipo"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:text="@string/txt_descricaoItem" />

        <EditText
            android:id="@+id/textItem"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:text="@string/txt_descricaoSubItem" />

        <EditText
            android:id="@+id/textSubItem"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="35dp"
        android:textSize="12sp"
        android:text="@string/txt_descricaoElemento" />

    <EditText
        android:id="@+id/textElemento"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="35dp"
        android:textSize="12sp"
        android:inputType="text" />
</LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:text="@string/btn_banco" />

        <EditText
            android:id="@+id/textBanco"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:text="@string/btn_conta" />

        <EditText
            android:id="@+id/textConta"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_data" />

        <EditText
            android:id="@+id/textData"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:inputType="date" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="---"></Button>

    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_valor" />

        <EditText
            android:id="@+id/textValor"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_salvar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_excluir" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_voltar" />
    </LinearLayout>


</LinearLayout>