<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivityFavorito">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtCategoria"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_categoria"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtCategoriaNome"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtTipo"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_tipoCategoria"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTipoNome"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtItem"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_item"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtItemNome"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtSubItem"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_subItem"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtSubItemNome"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtBanco"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_banco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtBancoNome"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtConta"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_conta"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtContaNome"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>



    //////////////////////////////////////

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_favoritoNome" />

        <EditText
            android:id="@+id/textDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/btn_salvar" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/btn_voltar" />
    </LinearLayout>

</LinearLayout>